added compose button

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 		
 		
 		<div id="sideBar">
+				<button id='compose'>Compose</button>
 			<ul class="sidebarItems" >Inbox</ul>
 			<ul class="sidebarItems">Starred</ul>
 			<ul class="sidebarItems">Snoozed</ul>
