added types of email boxes

--- a/index.html
+++ b/index.html
@@ -27,12 +27,6 @@
 
 		
 		
-		
-		
-		
-		
-		
-		
 		<div id="sideBar">
 				<button id='compose'>Compose</button>
 			<ul class="sidebarItems" >Inbox</ul>
@@ -43,6 +37,12 @@
 			<ul class="sidebarItems">Drafts</ul>
 			<ul class="sidebarItems">Categories</ul>
 			<ul class="sidebarItems">Notes</ul>
+		</div>
+
+		<div id="types">
+			<div class="typeBox">Primary</div>
+			<div class="typeBox">Social</div>
+			<div class="typeBox">Spam</div>
 		</div>
 		<div class="container" id="main">
 			Build Me!
