added user image

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div id="searchBar">
 			<input type="text" id ="search" placeholder="Search GEE-MAIL...">
 			<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/Magnifying_glass_icon.svg/1024px-Magnifying_glass_icon.svg.png" alt="mag" id="glass">
-			
+			<img src="https://st3.depositphotos.com/10312166/17789/v/950/depositphotos_177892264-stock-illustration-samurai-ready-fight-composition-designed.jpg" alt="samurai" id="userImage">
 			
 		</div>
 
