got subject to append to da kine

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			var whatVar= document.createElement('div');
 			whatVar.className='what';
 			whatVar.innerHTML=window.geemails[i].subject;
-			hi.appendChild(whatVar);
+			mail[i].appendChild(whatVar);
 
 		}
 			
