--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
 		
 		<div id="sideBar">
 				<button id='compose'>Compose</button>
-			<ul class="sidebarItems" >Inbox</ul>
+			<ul class="sidebarItems"  id='inbox'>Inbox</ul>
+			<div id="counter">0</div>
 			<ul class="sidebarItems">Starred</ul>
 			<ul class="sidebarItems">Snoozed</ul>
 			<ul class="sidebarItems">Important</ul>
