new subject and sender showing up

--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
 			newSender.className='newWho';
 			newSender.innerHTML=newStuff.sender;
 			newMessageBox.appendChild(newSender);
+
+			var newSubject = document.createElement('div');
+			newSubject.className='newWhat';
+			newSubject.innerHTML=newStuff.subject
+			newMessageBox.appendChild(newSubject);
 			
 
 			
