new body shows up and css applied to none

--- a/index.html
+++ b/index.html
@@ -88,7 +88,12 @@
 			newDate.innerHTML= newStuff.date;
 			newMessageBox.appendChild(newDate);
 
-			
+			var newThing = document.createElement('div');
+			newThing.className='newMail';
+			newThing.innerHTML= newStuff.body;
+			newMessageBox.appendChild(newThing);
+
+
 		}
 		setInterval(poofMessage,1000);
 		
