counter up and running, must make dis fuckah look pretty

--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
 			newThing.innerHTML= newStuff.body;
 			newMessageBox.appendChild(newThing);
 
+			count.innerHTML++
+
 
 		}
 		function bang(){
@@ -103,6 +105,8 @@
 			}else{fire.style.display='block'}
 		}
 		setInterval(poofMessage,1000);
+
+		
 		
 		
 		
