counter inline with Inbox text

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				fire.style.display ='none';
 			}else{fire.style.display='block'}
 		}
-		setInterval(poofMessage,1000);
+		setInterval(poofMessage,3000);
 
 		
 		
@@ -139,8 +139,10 @@
 		
 		<div id="sideBar">
 				<button id='compose'>Compose</button>
-			<ul class="sidebarItems"  id='inbox'>Inbox</ul>
-			<div id="counter">0</div>
+			<ul class="sidebarItems"  id='inbox'>Inbox
+					<div id="counter">0</div>
+			</ul>
+			
 			<ul class="sidebarItems">Starred</ul>
 			<ul class="sidebarItems">Snoozed</ul>
 			<ul class="sidebarItems">Important</ul>
