alert bell added

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
 		<div id="searchBar">
 			<input type="text" id ="search" placeholder="Search GEE-MAIL...">
 			<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/Magnifying_glass_icon.svg/1024px-Magnifying_glass_icon.svg.png" alt="mag" id="glass">
+			<img src="https://us.123rf.com/450wm/hvostik/hvostik1611/hvostik161100138/66621664-bell-icon-vector-yellow-silhouette-on-a-white-background-christmas-bell-celebration-symbol-icon-web-.jpg?ver=6" alt="bell" id='bell'>
 			<img src="https://st3.depositphotos.com/10312166/17789/v/950/depositphotos_177892264-stock-illustration-samurai-ready-fight-composition-designed.jpg" alt="samurai" id="userImage">
 			
 		</div>
