types box completed

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 		</div>
 
 		<div id="types">
-			<div class="typeBox">
+			<div class="typeBox" id="primary">
 				<img src="https://thumb9.shutterstock.com/mosaic_250/169597876/567423031/stock-vector-vector-illustration-of-brown-tie-icon-567423031.jpg" alt="tie" id='tie'>
 				Primary</div>
 			<div class="typeBox">
