--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
 		var primaryVar = document.getElementById('primary');
 		var spamVar = document.getElementById('spam');
 		socialVar.addEventListener('click',wow);
+		primaryVar.addEventListener('click',ping);
+		spamVar.addEventListener('click',haha)
 
 		function wow(){
 			if(primaryVar.style.color === 'rgb(124,49,49)'){
@@ -128,11 +130,51 @@
 		
 			if(primaryVar.style.backgroundColor === 'rgb(187, 182, 182)'){primaryVar.style.backgroundColor ='white'}else{primaryVar.style.backgroundColor='white'};
 
-			if(spamVar.style.backgroundColor === 'rgb(187, 182, 182)'){spam.style.backgroundColor ='white'}else{spamVar.style.backgroundColor='white'};
+			if(spamVar.style.backgroundColor === 'rgb(187, 182, 182)'){spamVar.style.backgroundColor ='white'}else{spamVar.style.backgroundColor='white'};
 
 			if(socialVar.style.backgroundColor === 'white'){socialVar.style.backgroundColor ='rgb(187, 182, 182)'}else{socialVar.style.backgroundColor='white'};
+		}
+
+		function ping(){
+			if(primaryVar.style.color === 'black'){
+				primaryVar.style.color = 'rgb(124,49,49)'
+			}else {primaryVar.style.color ='black'};
+
+			if(socialVar.style.color ==='rgb(124,49,49)'){
+				socialVar.style.color = 'black)'
+			}else{socialVar.style.color='black'};
+
+			if(spamVar.style.color ==='rgb(124,49,49)'){
+				spamVar.style.color = 'black'
+			}else{spamVar.style.color='black'};
 		
+			if(primaryVar.style.backgroundColor === 'white'){primaryVar.style.backgroundColor ='rgb(187, 182, 182)'}else{primaryVar.style.backgroundColor='white'};
+
+			if(spamVar.style.backgroundColor === 'rgb(187, 182, 182)'){spamVar.style.backgroundColor ='white'}else{spamVar.style.backgroundColor='white'};
+
+			if(socialVar.style.backgroundColor === 'rgb(187, 182, 182)'){socialVar.style.backgroundColor ='white'}else{socialVar.style.backgroundColor='white'};
+		}
+
+		function haha(){
+
+			if(primaryVar.style.color === 'rgb(124,49,49)'){
+				primaryVar.style.color = 'black'
+			}else {primaryVar.style.color ='black'};
+
+			if(socialVar.style.color ==='rgb(124,49,49)'){
+				socialVar.style.color = 'black)'
+			}else{socialVar.style.color='black'};
+
+			if(spamVar.style.color ==='black'){
+				spamVar.style.color = 'rgb(124,49,49)'
+			}else{spamVar.style.color='black'};
 		
+			if(primaryVar.style.backgroundColor === 'rgb(187, 182, 182)'){primaryVar.style.backgroundColor ='white'}else{primaryVar.style.backgroundColor='white'};
+
+			if(socialVar.style.backgroundColor === 'rgb(187, 182, 182)'){socialVar.style.backgroundColor ='white'}else{socialVar.style.backgroundColor='white'};
+
+			if(spamVar.style.backgroundColor === 'white'){spamVar.style.backgroundColor ='rgb(187, 182, 182)'}else{spamVar.style.backgroundColor='white'};
+
 		}
 		
 		
