easter egg image added

--- a/index.html
+++ b/index.html
@@ -241,5 +241,6 @@
 		<div class="container" id="main">
 			
 		</div>
+		<img src="https://st2.depositphotos.com/1526816/5742/v/950/depositphotos_57427625-stock-illustration-beers-cheers.jpg" alt="cheers" id='cheers'>
 	</body>
 </html>
