social button done

--- a/index.html
+++ b/index.html
@@ -133,6 +133,14 @@
 			if(spamVar.style.backgroundColor === 'rgb(187, 182, 182)'){spamVar.style.backgroundColor ='white'}else{spamVar.style.backgroundColor='white'};
 
 			if(socialVar.style.backgroundColor === 'white'){socialVar.style.backgroundColor ='rgb(187, 182, 182)'}else{socialVar.style.backgroundColor='white'};
+
+			if(main.style.display === 'block'){
+				main.style.display ='none';
+			}else{main.style.display='none'}
+
+			if(cheers.style.display ==='none'){
+				cheers.style.display ='block';
+			}else(cheers.style.display ='block');
 		}
 
 		function ping(){
@@ -242,5 +250,7 @@
 			
 		</div>
 		<img src="https://st2.depositphotos.com/1526816/5742/v/950/depositphotos_57427625-stock-illustration-beers-cheers.jpg" alt="cheers" id='cheers'>
+
+		<img src="https://images.mentalfloss.com/sites/default/files/styles/mf_image_16x9/public/20997-istock-471531747.jpg?itok=WuIIHhBP&resize=1100x1100" alt="spamPic" id='spamPic'>
 	</body>
 </html>
