pau hana for now

--- a/index.html
+++ b/index.html
@@ -141,6 +141,10 @@
 			if(cheers.style.display ==='none'){
 				cheers.style.display ='block';
 			}else(cheers.style.display ='block');
+
+			if(spamPic.style.display==='block'){
+				spamPic.style.display ='none';
+			}else{spamPic.style.display='none'}
 		}
 
 		function ping(){
@@ -161,6 +165,10 @@
 			if(spamVar.style.backgroundColor === 'rgb(187, 182, 182)'){spamVar.style.backgroundColor ='white'}else{spamVar.style.backgroundColor='white'};
 
 			if(socialVar.style.backgroundColor === 'rgb(187, 182, 182)'){socialVar.style.backgroundColor ='white'}else{socialVar.style.backgroundColor='white'};
+
+			if(main.style.display ==='none'){
+				main.style.display = 'block';
+			}else{main.style.display= 'block'}
 		}
 
 		function haha(){
@@ -183,7 +191,21 @@
 
 			if(spamVar.style.backgroundColor === 'white'){spamVar.style.backgroundColor ='rgb(187, 182, 182)'}else{spamVar.style.backgroundColor='white'};
 
+			if(main.style.display==='block'){
+				main.style.display='none';
+			}else(main.style.display='none')
+
+			if(cheers.style.display==='block'){
+				cheers.style.display='none';
+			}else(cheers.style.display='none')
+
+			if(spamPic.style.display === 'none'){
+				spamPic.style.display = 'block';
+			}else{spamPic.style.display ='block'}
+
 		}
+
+		
 		
 		
 		
