--- a/index.html
+++ b/index.html
@@ -169,6 +169,15 @@
 			if(main.style.display ==='none'){
 				main.style.display = 'block';
 			}else{main.style.display= 'block'}
+
+			if(spamPic.style.display==='block'){
+				spamPic.style.display='none';
+			}else{spamPic.style.display='none'}
+			
+			if(cheers.style.display==='block'){
+				cheers.style.display='none';
+			}else{cheers.style.display='none'}
+			
 		}
 
 		function haha(){
